tests/baselines/reference/templateStringsArrayTypeRedefinedInES6Mode.errors.txt
tests/cases/compiler/templateStringsArrayTypeRedefinedInES6Mode.ts(7,3): error TS2345: Argument of type '{}' is not assignable to parameter of type 'TemplateStringsArray'.
  Index signature is missing in type 'TemplateStringsArray'.


==== tests/cases/compiler/templateStringsArrayTypeRedefinedInES6Mode.ts (1 errors) ====
    class TemplateStringsArray {
    }
    
    function f(x: TemplateStringsArray, y: number, z: number) {
    }
    
    f({}, 10, 10);
      ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type 'TemplateStringsArray'.
!!! error TS2345:   Index signature is missing in type 'TemplateStringsArray'.
    
    f `abcdef${ 1234 }${ 5678 }ghijkl`;